crates/hdx_lexer/tests/snapshots/postcss_snapshots__postcss_semicolons.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "offset": 0,
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "offset": 2,
    "len": 1
  },
  {
    "kind": "Semicolon",
    "offset": 3,
    "len": 1
  },
  {
    "kind": "Semicolon",
    "offset": 4,
    "len": 1
  },
  {
    "kind": "Ident",
    "offset": 10,
    "len": 5
  },
  {
    "kind": "Colon",
    "offset": 15,
    "len": 1
  },
  {
    "kind": "Ident",
    "offset": 17,
    "len": 5
  },
  {
    "kind": "Semicolon",
    "offset": 22,
    "len": 1
  },
  {
    "kind": "Semicolon",
    "offset": 28,
    "len": 1
  },
  {
    "kind": "Semicolon",
    "offset": 30,
    "len": 1
  },
  {
    "kind": "RightCurly",
    "offset": 32,
    "len": 1
  }
]
